added Github link to repo

--- a/challenges.html
+++ b/challenges.html
@@ -64,12 +64,12 @@
             <div class="col-6 col-12-small">
                 <h3>Online Course Challenges</h3>
                 <p>Explore challenges I've tackled and am currently working on through platforms such as LeetCode, LinkedIn Learning, CodeAcademy, and various informative YouTube channels. These experiences contribute to my ongoing development as a versatile programmer.</p>
-                <a href="https://github.com/your-username/your-repository/online-course-challenges" class="button">GitHub Repository</a>
+                <a href="https://github.com/cdgg1231/Java-Code" class="button"> Java GitHub Repository</a>
             </div>
             <div class="col-6 col-12-small">
                 <h3>School Assignments</h3>
                 <p>Discover problems I've solved during my academic pursuit of a Bachelor's in Computer Science. These assignments showcase the application of theoretical knowledge to practical scenarios, highlighting my commitment to both academic and real-world problem-solving.</p>
-                <a href="https://github.com/your-username/your-repository/school-assignments" class="button">GitHub Repository</a>
+                <a href="https://github.com/your-username/your-repository/school-assignments" class="button"> Python GitHub Repository</a>
             </div>
         </div>
         <br><br> <!-- Line breaks to add space -->
