--- a/projects.html
+++ b/projects.html
@@ -34,10 +34,7 @@
 							<li><a href="challenges.html">Code challenges</a></li>
 							<li><a href="about.html">About me</a></li>
 						</ul>
-						<ul class="actions stacked">
-							<li><a href="#" class="button primary fit">Get Started</a></li>
-							<li><a href="#" class="button fit">Log In</a></li>
-						</ul>
+						
 					</nav>
 
 				<!-- Banner -->
@@ -48,12 +45,10 @@
 								<img src="images/pic07.jpg" alt="" />
 							</span>
 							<header class="major">
-								<h1>Projects</h1>
+								<h1>Project Showcase</h1>
 							</header>
-							<div class="content">
-								<p>Lorem ipsum dolor sit amet nullam consequat<br />
-								sed veroeros. tempus adipiscing nulla.</p>
-							</div>
+							
+						</div>
 						</div>
 					</section>
 
@@ -61,29 +56,36 @@
 					<div id="main">
 
 						<!-- One -->
-							<section id="one">
-								<div class="inner">
-									<header class="major">
-										<h2>Sed amet aliquam</h2>
-									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna.</p>
-								</div>
-							</section>
+						<section id="one">
+							<div class="inner">
+								<header class="major">
+									<h2>Portfolio</h2>
+								</header>
+								<p>Welcome to my portfolio, where I proudly present a selection of collaborative 
+									projects undertaken during my senior classes. These endeavors showcase 
+									not only my technical skills but also my ability to work seamlessly with 
+									fellow students. Our approach demostrates the ability to thrive in a
+									agile enviroment, implementing a Scrum framework for simplicity and efficiency.</p>								
+
+							</div>
+						</section>
 
 						<!-- Two -->
 							<section id="two" class="spotlights">
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/pic08.jpg" alt="" data-position="center center" />
+										<img id= "banner-image" src="images/IMSScreenshots/1.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Orci maecenas</h3>
+												<h3>Inventory Management System</h3>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p>As part of our CS 3250 Software Development Methods and Tools class, we developed an Inventory Management System. This program efficiently handles inventory items stored in a SQL database, providing distinct graphical user interfaces (GUIs) for both customer orders and employee interactions.
+												 One of the key features is its automatic updating mechanism, ensuring real-time synchronization with the inventory.
+												 As well as a financial report for company orders. Throughout the semester-long project, we applied industry best practices and methodologies, including the implementation of JUnit for thorough testing of our methods and local database interactions.</p>
 											<ul class="actions">
-												<li><a href="generic.html" class="button">Learn more</a></li>
+												<a href="https://github.com/your-username/your-repository/school-assignments" class="button"> IMS GitHub Repository</a>
 											</ul>
 										</div>
 									</div>
@@ -212,6 +214,31 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			
+			<!-- Image Rotation Script -->
+<script>
+    // Array of image filenames in the IMSScreenshots folder
+    var imageFiles = ["1.png", "2.png", "3.png", "4.png", "5.png", "6.png", "7.png", "8.png", "9.png"];
 
+    var currentImageIndex = 0; // Index of the currently displayed image
+    var imageElement = document.getElementById("banner-image"); // Get the image element
+
+    // Function to rotate to the next image
+    function rotateImage() {
+        // Update the src attribute of the image element
+        imageElement.src = "/images/IMSScreenshots/" + imageFiles[currentImageIndex];
+
+        // Increment the index for the next iteration
+        currentImageIndex++;
+
+        // Reset the index to 0 when it exceeds the number of images
+        if (currentImageIndex >= imageFiles.length) {
+            currentImageIndex = 0;
+        }
+    }
+
+    // Call the rotateImage function at regular intervals (e.g., every 5 seconds)
+    setInterval(rotateImage, 6000); // Adjust the interval as needed
+</script>
 	</body>
 </html>
