--- a/about.html
+++ b/about.html
@@ -56,11 +56,11 @@
                 <!-- Experiences Box -->
                 <h3>Experiences</h3>
                 <div class="box">
-                    <p>With five years of technical IT support experience, I gained valuable insights into technology, 
-						teamwork, and communication. In my current role as a subcontractor for government companies, I assemble and 
-						configure various components for correctional facilities, such as panels, doors, alarms, cameras, intercoms, 
-						servers, control stations, and more. I recognize the importance of precision, especially as the equipment is 
-						controlled by PLCs using Ladder logic.</p>
+                    <p>
+
+In my current company, I have learned about PLC programming and Human Machine Interface (HMI) design with SCADA systems. Programming HMIs and integrating them with SCADA systems has allowed me to further hone my skills in industrial automation and control, ensuring seamless operation and monitoring of critical processes within correctional facilities.
+
+Five years of technical IT support experience gave me valuable insights into technology, teamwork, and communication. I recognize the importance of precision, especially as the equipment is controlled by PLCs using Ladder logic. I have learned to configure various components for correctional facilities, such as panels, doors, alarms, cameras, intercoms, servers, control stations, and more.</p>
                 </div>
 				 <!-- Certificates Box -->
 				 <h3>Certificates</h3>
