--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 									<h2>Programming Proficiency</h2>
 								</header>
 								<ul class="skills-list">
-									<li><strong>Programming Languages:</strong> Java, JUnit Python, HTML, CSS, JavaScript, Ruby on Rails, C#</li>
+									<li><strong>Programming Languages:</strong> Java, JUnit Python, PLC Programming, VB Script HTML, CSS, JavaScript, Ruby on Rails, C#</li>
 									<li><strong>Build Automation:</strong> Maven</li>
 									<li><strong>Database:</strong> MySQL, PostgresSQL, MongoDB</li>
 									<li><strong>Version Control:</strong> Git</li>
