--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <title>About me</title>
+    <title>About Me</title>
     <link rel="stylesheet" href="assets/css/main.css" />
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
@@ -25,8 +25,8 @@
         <ul class="links">
             <li><a href="index.html">Home</a></li>
             <li><a href="projects.html">Projects</a></li>
-            <li><a href="challenges.html">Code challenges</a></li>
-            <li><a href="about.html">About me</a></li>
+            <li><a href="challenges.html">Code Challenges</a></li>
+            <li><a href="about.html">About Me</a></li>
         </ul>
     </nav>
 
@@ -37,42 +37,40 @@
         <section id="one">
             <div class="inner">
                 <header class="major">
-                    <h1>A little About me</h1>
+                    <h1>A Little About Me</h1>
                 </header>
-                <p>Residing in Colorado but with roots in a small Mexican farm, I am a first-generation student. 
-					I have a passion for learning, problem-solving, and aspire to work for a company that makes a 
-					positive impact. Alongside my pursuit of becoming a Software Engineer, 
-					I also nurture my coaching skills as a youth soccer coach, with dreams of 
-					coaching at a competitive level.</p>
+                <p>
+                    I am a Colorado-based Software Engineer with deep roots in a small Mexican farming community. As a first-generation college graduate, I am passionate about learning, problem-solving, and contributing to projects that make a positive impact. Alongside my professional journey, I am an experienced youth soccer coach with aspirations to coach at a competitive level, helping young athletes achieve their goals both on and off the field.
+                </p>
 
                 <!-- Education Box -->
                 <h3>Education</h3>
                 <div class="box">
-                    <p>I'm currently a Senior at Metropolitan State University pursuing a Bachelor's in 
-						Computer Science. <br> Current GPA: 3.5 <br> Anticipation graduation in May 2024. <br>
-                        Succesfully Completed First-Generation Initiative Program in 2021 </p>
+                    <p>
+                        I hold a Bachelor’s degree in Computer Science with a focus on Software Engineering from Metropolitan State University of Denver. My academic journey was marked by a GPA of 3.5 and successful completion of the First-Generation Initiative Program in 2021.
+                    </p>
                 </div>
 
                 <!-- Experiences Box -->
-                <h3>Experiences</h3>
+                <h3>Professional Experience</h3>
                 <div class="box">
                     <p>
-
-In my current company, I have learned about PLC programming and Human Machine Interface (HMI) design with SCADA systems. Programming HMIs and integrating them with SCADA systems has allowed me to further hone my skills in industrial automation and control, ensuring seamless operation and monitoring of critical processes within correctional facilities.
-
-Five years of technical IT support experience gave me valuable insights into technology, teamwork, and communication. I recognize the importance of precision, especially as the equipment is controlled by PLCs using Ladder logic. I have learned to configure various components for correctional facilities, such as panels, doors, alarms, cameras, intercoms, servers, control stations, and more.</p>
+                        Over the past five years, I have gained extensive experience in the tech industry, starting with technical support roles such as call support and deskside support technician. After earning my degree, I transitioned into software development and programming roles.
+                    </p>
+                    <p>
+                        I specialize in PLC programming, Human Machine Interface (HMI) design, and SCADA systems. These skills enable me to develop and integrate automated industrial systems that ensure seamless operation and monitoring of critical processes, such as those within correctional facilities. Additionally, I leverage tools like Python and SQL for data manipulation, efficient script execution, and generating insightful reports to drive decision-making and optimize performance.
+                    </p>
                 </div>
-				 <!-- Certificates Box -->
-				 <h3>Certificates</h3>
-				 <div class="box">
-					 <p>Certificates I've earned: [Link to Certificates]</p>
-				 </div>
+
+                <!-- Certificates Box -->
+                <h3>Certifications</h3>
+                <div class="box">
+                    <p>
+                        Certificates I have earned: <a href="https://www.linkedin.com/in/david-gaytan-7016a5205/details/certifications/" target="_blank">View My Certifications</a>
+                    </p>
+                </div>
             </div>
-
-			
         </section>
-
-		
 
         <!-- Contact Section -->
         <section id="contact">
@@ -82,7 +80,7 @@ Five years of technical IT support experience gave me valuable insights into tec
                         <div class="contact-method">
                             <span class="icon solid alt fa-envelope"></span>
                             <h3>Email</h3>
-                            <a href="#">DavidGaytan2023@outlook.com<br></a>
+                            <a href="mailto:GaytanD2023@Gmail.com">GaytanD2023@Gmail.com</a>
                         </div>
                     </section>
                     <section>
@@ -102,7 +100,6 @@ Five years of technical IT support experience gave me valuable insights into tec
                 </section>
             </div>
         </section>
-
     </div>
 
     <!-- Footer -->
@@ -112,7 +109,7 @@ Five years of technical IT support experience gave me valuable insights into tec
                 <li><a href="https://www.linkedin.com/in/david-gaytan-7016a5205/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
             </ul>
             <ul class="copyright">
-                <li>&copy; Untitled</li>
+                <li>&copy; 2024 David Gaytan</li>
                 <li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
             </ul>
         </div>
