--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
                 <h3>Education</h3>
                 <div class="box">
                     <p>
-                        I hold a Bachelor’s degree in Computer Science with a focus on Software Engineering from Metropolitan State University of Denver. My academic journey was marked by a GPA of 3.5 and successful completion of the First-Generation Initiative Program in 2021.
+                        I hold a Bachelor’s degree in Computer Science with a focus on Software Engineering from Metropolitan State University of Denver. My academic journey was marked by a GPA of 3.3 while maintaining a full-time job and successful completion of the First-Generation Initiative Program in 2021.
                     </p>
                 </div>
 
