Updated skills and content

--- a/about.html
+++ b/about.html
@@ -55,10 +55,15 @@
                 <h3>Professional Experience</h3>
                 <div class="box">
                     <p>
-                        Over the past five years, I have gained extensive experience in the tech industry, starting with technical support roles such as call support and deskside support technician. After earning my degree, I transitioned into software development and programming roles.
+                        Over the past eight years, I have gained extensive experience in the tech industry, starting with technical support roles such as call support and deskside support technician. After earning my degree, I transitioned into software development and programming, focusing on automation, data management, and system integration.
                     </p>
                     <p>
-                        I specialize in PLC programming, Human Machine Interface (HMI) design, and SCADA systems. These skills enable me to develop and integrate automated industrial systems that ensure seamless operation and monitoring of critical processes, such as those within correctional facilities. Additionally, I leverage tools like Python and SQL for data manipulation, efficient script execution, and generating insightful reports to drive decision-making and optimize performance.
+                        In my current role, I contribute to building applications that integrate automated industrial systems to ensure seamless operation and monitoring of critical processes, including those within correctional facilities. I utilize Python and SQL to automate workflows, manage large datasets, and generate actionable reports. These tools, combined with my expertise in designing and maintaining scripts and data pipelines, enable me to optimize system performance and support efficient decision-making.
+                    </p>
+                    <p>
+                        My background bridges the gap between software development and operational infrastructure, equipping me with the skills required for roles that demand collaboration, scalability, and innovation.
+
+
                     </p>
                 </div>
 
