Update projects and about me sections to emphasize authentication

--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
                     <h1>A Little About Me</h1>
                 </header>
                 <p>
-                    I am a Colorado-based Software Engineer with deep roots in a small Mexican farming community. As a first-generation college graduate, I am passionate about learning, problem-solving, and contributing to projects that make a positive impact. Alongside my professional journey, I am an experienced youth soccer coach with aspirations to coach at a competitive level, helping young athletes achieve their goals both on and off the field.
+I am a Colorado-based Software Engineer with deep roots in a small Mexican farming community. As a first-generation college graduate, I’m passionate about learning, innovation, and creating technology that makes a real impact. My goal is to grow as a software engineer, continue developing meaningful solutions, and serve as a role model for my family and community. I have a strong foundation in Python, SQL, Agile methodologies, Ruby on Rails, and HTML/CSS, and I’m continually expanding my technical skills to stay current in the ever-evolving tech landscape. Beyond my professional work, I enjoy helping small business owners build websites that elevate their online presence and improve accessibility. Outside of software, I am also a dedicated youth soccer coach, driven by the same passion for growth, teamwork, and discipline that fuels my approach to engineering. I strive to make a positive difference through hard work, creativity, and mentorship.
                 </p>
 
                 <!-- Education Box -->
@@ -53,19 +53,26 @@
 
                 <!-- Experiences Box -->
                 <h3>Professional Experience</h3>
-                <div class="box">
-                    <p>
-                        Over the past eight years, I have gained extensive experience in the tech industry, starting with technical support roles such as call support and deskside support technician. After earning my degree, I transitioned into software development and programming, focusing on automation, data management, and system integration.
-                    </p>
-                    <p>
-                        In my current role, I contribute to building applications that integrate automated industrial systems to ensure seamless operation and monitoring of critical processes, including those within correctional facilities. I utilize Python and SQL to automate workflows, manage large datasets, and generate actionable reports. These tools, combined with my expertise in designing and maintaining scripts and data pipelines, enable me to optimize system performance and support efficient decision-making.
-                    </p>
-                    <p>
-                        My background bridges the gap between software development and operational infrastructure, equipping me with the skills required for roles that demand collaboration, scalability, and innovation.
+            <div class="box">
 
+                <p>
+                    Over the past eight years, I have gained extensive experience in the tech industry, starting with technical support roles such as call support and deskside support technician. After earning my degree, I transitioned into software development and programming, focusing on automation, data management, and system integration.
+                </p>
 
-                    </p>
-                </div>
+                <p>
+                    In my current role, I contribute to building applications that integrate automated industrial systems to ensure seamless operation and monitoring of critical processes, including those within correctional facilities. I utilize Python and SQL to automate workflows, manage large datasets, and generate actionable reports. These tools, combined with my expertise in designing and maintaining scripts and data pipelines, enable me to optimize system performance and support efficient decision-making.
+                </p>
+
+                <p>
+                    I also developed a full-stack web dashboard using Flask and SQLAlchemy that allows end users to view, search, and filter daily logs by user, station, and date — significantly improving visibility and efficiency across departments. Additionally, I built an internal knowledge base platform that enables programmers to upload, edit, and organize project documentation, fostering better collaboration and long-term maintainability across teams.
+                </p>
+
+                <p>
+                    My background bridges the gap between software development and operational infrastructure, equipping me with the skills required for roles that demand collaboration, scalability, and innovation.
+                </p>
+
+            </div>
+
 
                 <!-- Certificates Box -->
                 <h3>Certifications</h3>
@@ -99,7 +106,7 @@
                         <div class="contact-method">
                             <span class="icon solid alt fa-home"></span>
                             <h3>Address</h3>
-                            <span>Longmont, Colorado</span>
+                            <span>Rio Rancho, New Mexico</span>
                         </div>
                     </section>
                 </section>
