--- a/index.html
+++ b/index.html
@@ -111,12 +111,15 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3>Future Projects</a></h3>
-										<p>API</p>
-										<p>APPs</p>
-
-									
-									</header>
+									<h3>Future Projects</h3>
+									<p style="margin-bottom: 15px;">API</p>
+									<p style="margin-bottom: 15px;">Developing Phone Apps using React Native</p>
+									<p style="margin-bottom: 15px;">
+										I am currently expanding my skill set by 
+										<strong>developing a conversational application (chatbot) with .NET Framework</strong> 
+										aimed at enhancing automated user interaction and demonstrating microservice principles.
+									</p>
+								</header>
 								</article>
 							</section>
 
@@ -127,12 +130,14 @@
 									<h2>Programming Proficiency</h2>
 								</header>
 								<ul class="skills-list">
-									<li><strong>Programming Languages:</strong> Python, Java, SQL, Ruby on Rails, PLC Programming</li>
-									<li><strong>Build and Deployment Automation:</strong> Maven</li>
-									<li><strong>Database Management:</strong> SQL Server (SSMS), MySQL, PostgreSQL</li>
-									<li><strong>Version Control:</strong> Git, GitHub</li>
-									<li><strong>Cloud and Infrastructure:</strong> Docker</li>
-									<li><strong>Monitoring and Logging:</strong> Views scripts</li>
+								<li><strong>Programming Languages:</strong> Python, Java, C#, SQL, PLC (Ladder, Structured Text)</li>
+								<li><strong>Frameworks & Runtimes:</strong> Ruby on Rails, ASP.NET Core (.NET), Flask</li>
+								<li><strong>Architectural Patterns:</strong> MVC (Rails, ASP.NET)</li>
+								<li><strong>Build & Dependency Management:</strong> Maven (Java), Bundler (Rails), pip/venv (Python)</li>
+								<li><strong>Database Management:</strong> SQL Server (SSMS), MySQL, PostgreSQL</li>
+								<li><strong>Version Control:</strong> Git, GitHub</li>
+								<li><strong>DevOps & Deployment:</strong> Docker, GitHub Actions, Render</li>
+								<li><strong>Monitoring & Reporting:</strong> SQL views & stored procedures, SSRS, app logs (Rails logger, Python logging)</li>
 								</ul>
 							</div>
 						</section>
