--- a/soloProjects.html
+++ b/soloProjects.html
@@ -50,6 +50,42 @@
             <!-- Main -->
             <div id="main">
 
+           <!-- **NEW PROJECT DLRS Dashboard** -->
+                <section id="one">
+                    <div class="inner">
+                        <header class="major">
+                            <h2>Daily Log Reporting System (DLRS) Dashboard</h2>
+                        </header>
+                        <p>
+                            The DLRS Dashboard is a **full-stack web application** designed to automate and centralize the processing of industrial log data. It replaced manual, error-prone Excel log sorting with a modern, secure web interface.
+                        </p>
+                        <p>
+                            I engineered the **RESTful API backend using Python/Flask** and integrated it directly with a **SQL Server database** via SQLAlchemy. This design ensures **authenticated access** to large log datasets, enabling **authorized end-users** to securely view, search, and filter daily records by multiple parameters (date, user, station). The system also features **PDF and Excel export functionality** for seamless report generation.
+                        </p>
+                        <ul class="actions">
+                            <li><a href="#" class="button disabled">Private Repository (Internal Use)</a></li>
+                        </ul>
+                    </div>
+                </section>
+                
+                <!-- **Knowledge Base Web Application** -->
+                <section id="two">
+                    <div class="inner">
+                        <header class="major">
+                            <h2>Collaborative Knowledge Base Editor</h2>
+                        </header>
+                        <p>
+                            I developed a dedicated internal web application to serve as a **centralized knowledge repository** for the engineering and programming team. This solution focused on collaborative efficiency and user management.
+                        </p>
+                        <p>
+                            The application requires users to pass a **mandatory login page** and allows multiple programmers to **securely upload, edit, and maintain documentation** and technical reference guides. This project highlights my experience in designing systems with **role-based user authentication, file handling, and version control** to support efficient inter-team collaboration and knowledge sharing.
+                        </p>
+                        <ul class="actions">
+                            <li><a href="#" class="button disabled">Private Repository (Internal Use)</a></li>
+                        </ul>
+                    </div>
+                </section>
+
                 <!-- One -->
                 <section id="one">
                     <div class="inner">
