Added websites page and updated homepage

--- a/projects.html
+++ b/projects.html
@@ -31,6 +31,8 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="projects.html">Projects</a></li>
+							<li><a href="soloProjects.html">Solo Projects</a></li>
+							<li><a href="websites.html">Websites I've Built</a></li>
 							<li><a href="challenges.html">Code challenges</a></li>
 							<li><a href="about.html">About me</a></li>
 						</ul>
