--- a/about.html
+++ b/about.html
@@ -25,6 +25,8 @@
         <ul class="links">
             <li><a href="index.html">Home</a></li>
             <li><a href="projects.html">Projects</a></li>
+            <li><a href="soloProjects.html">Solo Projects</a></li>
+            <li><a href="websites.html">Websites I've Built</a></li>
             <li><a href="challenges.html">Code Challenges</a></li>
             <li><a href="about.html">About Me</a></li>
         </ul>
